# libft

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
include/: ft_printf.h  get_next_line.h  libft.h  libft_extra.h
src/ft_printf/: Makefile
src/ft_printf/src/: ft_print.c  ft_printf.c  ft_utils.c  tests.c
src/get_next_line/src/: get_next_line.c  get_next_line_utils.c
src/libft_core/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c
src/libft_extra/: error_exit.c  safe_malloc.c  word_count.c
